--- a/style.css
+++ b/style.css
@@ -2,28 +2,106 @@
 
 *{
     margin: 0;
-    position: relative;
+    box-sizing: border-box;
+    padding: 0;
+
 }
+
+:root{
+    --primary-color: aqua;
+    --font-title: 'Calibri';
+    --font-default: 'Arial';
+}
+
+header{
+    height: 100vh;
+    position: relative;
+    padding-left: 6.8rem;
+    padding-top: 16.8rem;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+}
+
+
 header::before {
     content: '';
-    background-color: red;
-    height: 100px;
-    width: 100px;
+    background-image: url('./images/background\ image.jpg');
+    background-size: cover;
+    background-color:0 red;
+    height: 100%;
+    width: 100%;
     display: block;
-    
+    position: absolute;
+    left: 0;
+    z-index: -1;
+    top: 0;
+
+
 }
 
 
 h1 {
-    color:rgb(0, 0, 0);
+    color:rgb(255, 255, 255);
     text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.25);
     font-size: 3rem;
+    font-weight: 700;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     
 }
 
 span {
-    color: rgb(194, 21, 21);
+    color: rgb(228, 205, 205);
     text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.25);
-    font-size: 2rem;
+    font-size: 1rem;
+    font-weight: 700;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     
+}
+.botao {
+background-color: aqua;
+color:darkblue;
+font-family:'Courier New', Courier, monospace;
+padding: .25rem 5rem;
+padding-top: 1.2rem;
+padding-bottom: 0.8rem;
+border-radius: 4px;
+text-decoration: none;
+transition: background-color 1s;
+
+
+
+
+
+}
+.botao:hover{
+    opacity: .5;
+    background-color: rgb(29, 97, 102);
+
+
+}
+
+#secao-apresentacao{
+    display: flex;
+    height: 50vh;
+    padding: 6rem;
+    gap: 2rem;
+
+}
+
+#secao-apresentacao img{
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    display: flex;
+}
+
+#secao-apresentacao div{
+    display: flex;
+    gap: 2rem;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 60;
 }
